k8s/apps/production/cert-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-portal
  namespace: cert-portal
spec:
  selector:
    app: cert-portal
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
