k8s/apps/production/cert-portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-portal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - certportal.halvorteigen.no
      secretName: certportal-halvorteigen-tls
  rules:
    - host: certportal.halvorteigen.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-portal
                port:
                  number: 80
